# binmergetool

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: workflow.yml
binmergetool/: __main__.py  binmergetool.py
