[tool.poetry]
name = "binmergetool"
version = "0.1.1"
description = "Tool for merging binary files together"
authors = ["Antoine Jeanson <anonymous@mail.com>"]
license = "MIT"
readme = "README.md"
homepage = "https://github.com/antoinejeanson/binmergetool"
repository = "https://github.com/antoinejeanson/binmergetool"

[tool.poetry.dependencies]
python = "^3.11"

[tool.poetry.group.dev.dependencies]
black = "^23.3.0"
ruff = "^0.0.269"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
